--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -2,6 +2,9 @@ $icon-font-path: "/fonts/";
 
 @import './bower_components/bootstrap-sass/assets/stylesheets/bootstrap';
 
+body{
+
+}
 .action-buttons{
   margin-bottom: 10px;
 }
@@ -13,4 +16,24 @@ $icon-font-path: "/fonts/";
       }
     }
   }
+}
+
+.tree{
+
+}
+
+.page-tree{
+
+}
+
+.angular-ui-tree-node, .angular-ui-tree-placeholder {
+  position: relative;
+  margin: 0;
+  padding: 5px;
+  min-height: 20px;
+  line-height: 20px;
+  margin: 5px;
+  margin-right: 0;
+  padding-right: 0;
+ // border: 1px solid;
 }
