--- a/app/views/pages/shopping/coupons.html
+++ b/app/views/pages/shopping/coupons.html
@@ -63,14 +63,11 @@
                       <i class="fa fa-times"></i>
                     </a>
 
-										<md-button class="md-icon-button md-warn" aria-label="Settings"  ng-click="deleteCoupon(coupon)">
-						          <md-icon ><i class="mdi mdi-delete" ></i></md-icon>
-						        </md-button>
+                    <md-button class="md-icon-button md-warn" aria-label="Settings"  ng-click="deleteCoupon(coupon)">
+                      <md-icon ><i class="mdi mdi-delete" ></i></md-icon>
+                    </md-button>
 
-
-
-										<md-switch class="md-primary" md-no-ink ng-model="coupon.active" ng-change="activate(coupon)">
-									  </md-switch>
+                    <md-switch class="md-primary" md-no-ink ng-model="coupon.active" ng-change="activate(coupon)"></md-switch>
                   </td>
                 </tr>
               </table>
