--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1,4 +1,4 @@
-$icon-font-path: "/fonts/";
+$icon-font-path: "/css/fonts/";
 
 @import './bower_components/bootstrap-sass/assets/stylesheets/bootstrap';
 
@@ -36,4 +36,17 @@ body{
   margin-right: 0;
   padding-right: 0;
  // border: 1px solid;
+}
+
+.drop-box {
+  background: #F8F8F8;
+  border: 5px dashed #DDD;
+  width: 200px;
+  height: 65px;
+  text-align: center;
+  padding-top: 25px;
+  margin: 10px;
+}
+.dragover {
+  border: 5px dashed blue;
 }
