--- a/app/views/layouts/dashboard.html
+++ b/app/views/layouts/dashboard.html
@@ -128,11 +128,14 @@
 	<div class="scrollbar" id="scroll">
 		<div class="user-info">
 			<div class="opacity">
-				<a ui-sref="profile"><img src="images/profile.jpg" alt="" class="sidebar-profile"></a>
+				<a ui-sref="profile">
+					<img src="{{currentUser.portraitUrl}}" alt="{{currentUser.firstName+' '+currentUser.lastName}}" class="sidebar-profile">
+				</a>
 				<div class="info">
-					Sankhadeep Roy <br /> <span class="smaller">Striker at Liverpool FC</span>
+					{{currentUser.firstName+' '+currentUser.lastName}} <br />
+					<!--<span class="smaller">Striker at Liverpool FC</span>-->
 					<div class="pen">
-						<a href="#" class=""><i class="mdi mdi-border-color"></i></a>
+						<a href="#/dashboard/user/details" class=""><i class="mdi mdi-border-color"></i></a>
 					</div>
 				</div>
 			</div>
@@ -168,12 +171,26 @@
 
 
 				<li class="show-subnav">
+					<md-button href="" class=" show-menu" ng-click="subnav('user')">
+						<i class="mdi mdi-chevron-down" ng-class="{'active': showingSubNav=='user'}"></i>
+						<i class="mdi mdi-chart-areaspline"></i> &nbsp;
+						<span class="text">{{ 'User' | translate }}</span>
+					</md-button>
+					<ul class="sub-menu" ng-class="{'visible': showingSubNav=='user'}">
+						<li ng-class="{active: $state.includes('user-details')}"><md-button ui-sref="user-details" class=""><span class="text">Details</span></md-button></li>
+						<li ng-class="{active: $state.includes('password-change')}"><md-button ui-sref="password-change" class=""><span class="text">Change Password</span></md-button></li>
+					</ul>
+				</li>
+
+				<li class="show-subnav">
 					<md-button href="" class=" show-menu" ng-click="subnav('site')">
 						<i class="mdi mdi-chevron-down" ng-class="{'active': showingSubNav=='site'}"></i>
 						<i class="mdi mdi-chart-areaspline"></i> &nbsp;
 						<span class="text">{{ 'Site' | translate }}</span>
 					</md-button>
 					<ul class="sub-menu" ng-class="{'visible': showingSubNav=='site'}">
+						<li ng-class="{active: $state.includes('sites')}"><md-button ui-sref="sites" class=""><span class="text">Sites</span></md-button></li>
+
 						<li ng-class="{active: $state.includes('pages')}"><md-button ui-sref="pages" class=""><span class="text">Pages</span></md-button></li>
 						<li ng-class="{active: $state.includes('site-settings')}"><md-button ui-sref="site-settings" class=""><span class="text">Settings</span></md-button></li>
 						<li ng-class="{active: $state.includes('style')}"><md-button ui-sref="style" class=""><span class="text">Style</span></md-button></li>
